--- a/about.html
+++ b/about.html
@@ -17,8 +17,9 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/preloader.min.css" rel="stylesheet">
     <link href="css/circle.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <!-- <link href="css/font-awesome.min.css" rel="stylesheet"> -->
     <link href="css/fm.revealator.jquery.min.css" rel="stylesheet">
+    <link href="css/fonts.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
 
@@ -32,32 +33,32 @@
 <header class="header" id="navbar-collapse-toggle">
     <!-- Fixed Navigation Starts -->
     <ul class="icon-menu d-none d-lg-block revealator-slideup revealator-once revealator-delay1">
-        <li class="icon-box">
-            <i class="fa fa-home"></i>
+        <li class="icon-box active">
+            <i class="fa icon-home"></i>
             <a href="index.html">
                 <h2>Home</h2>
             </a>
         </li>
-        <li class="icon-box active">
-            <i class="fa fa-user"></i>
+        <li class="icon-box">
+            <i class="fa icon-user-tie"></i>
             <a href="about.html">
                 <h2>About</h2>
             </a>
         </li>
         <li class="icon-box">
-            <i class="fa fa-briefcase"></i>
+            <i class="fa icon-briefcase"></i>
             <a href="portfolio.html">
                 <h2>Portfolio</h2>
             </a>
         </li>
         <li class="icon-box">
-            <i class="fa fa-envelope-open"></i>
+            <i class="fa icon-envelope"></i>
             <a href="contact.html">
                 <h2>Contact</h2>
             </a>
         </li>
         <li class="icon-box">
-            <i class="fa fa-comments"></i>
+            <i class="fa icon-comments-alt"></i>
             <a href="blog.html">
                 <h2>Blog</h2>
             </a>
@@ -72,11 +73,11 @@
             <span></span>
             <span></span>
             <ul class="list-unstyled" id="menu">
-                <li><a href="index.html"><i class="fa fa-home"></i><span>Home</span></a></li>
-                <li class="active"><a href="about.html"><i class="fa fa-user"></i><span>About</span></a></li>
-                <li><a href="portfolio.html"><i class="fa fa-folder-open"></i><span>Portfolio</span></a></li>
-                <li><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
-                <li><a href="blog.html"><i class="fa fa-comments"></i><span>Blog</span></a></li>
+                <li class="active"><a href="index.html"><i class="fa icon-home"></i><span>Home</span></a></li>
+                <li><a href="about.html"><i class="fa icon-user-tie"></i><span>About</span></a></li>
+                <li><a href="portfolio.html"><i class="fa icon-briefcase"></i><span>Portfolio</span></a></li>
+                <li><a href="contact.html"><i class="fa icon-envelope"></i><span>Contact</span></a></li>
+                <li><a href="blog.html"><i class="fa icon-comments-alt"></i><span>Blog</span></a></li>
             </ul>
         </div>
     </nav>
@@ -256,7 +257,7 @@
                     <ul>
                         <li>
                             <div class="icon">
-                                <i class="fa fa-briefcase"></i>
+                                <i class="fa icon-briefcase"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2018 - Present</span>
                             <h5 class="poppins-font text-uppercase">Web Developer <span class="place open-sans-font">Envato</span></h5>
@@ -264,7 +265,7 @@
                         </li>
                         <li>
                             <div class="icon">
-                                <i class="fa fa-briefcase"></i>
+                                <i class="fa icon-briefcase"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2013 - 2018</span>
                             <h5 class="poppins-font text-uppercase">UI/UX Designer <span class="place open-sans-font">Themeforest</span></h5>
@@ -272,7 +273,7 @@
                         </li>
                         <li>
                             <div class="icon">
-                                <i class="fa fa-briefcase"></i>
+                                <i class="fa icon-briefcase"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2005 - 2013</span>
                             <h5 class="poppins-font text-uppercase">Consultant <span class="place open-sans-font">Videohive</span></h5>
@@ -286,7 +287,7 @@
                     <ul>
                         <li>
                             <div class="icon">
-                                <i class="fa fa-graduation-cap"></i>
+                                <i class="fa icon-university"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2015</span>
                             <h5 class="poppins-font text-uppercase">Engineering Degree <span class="place open-sans-font">Oxford University</span></h5>
@@ -294,7 +295,7 @@
                         </li>
                         <li>
                             <div class="icon">
-                                <i class="fa fa-graduation-cap"></i>
+                                <i class="fa icon-university"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2012</span>
                             <h5 class="poppins-font text-uppercase">Master Degree <span class="place open-sans-font">Kiev University</span></h5>
@@ -302,7 +303,7 @@
                         </li>
                         <li>
                             <div class="icon">
-                                <i class="fa fa-graduation-cap"></i>
+                                <i class="fa icon-university"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2009</span>
                             <h5 class="poppins-font text-uppercase">Bachelor Degree <span class="place open-sans-font">Tunis High School</span></h5>
@@ -319,16 +320,16 @@
 
 <!-- Template JS Files -->
 <script src="js/jquery-3.5.0.min.js"></script>
-<script src="js/styleswitcher.js"></script>
+<!-- <script src="js/styleswitcher.js"></script> -->
 <script src="js/preloader.min.js"></script>
 <script src="js/fm.revealator.jquery.min.js"></script>
-<script src="js/imagesloaded.pkgd.min.js"></script>
-<script src="js/masonry.pkgd.min.js"></script>
+<!-- <script src="js/imagesloaded.pkgd.min.js"></script> -->
+<!-- <script src="js/masonry.pkgd.min.js"></script> -->
 <!-- <script src="js/classie.js"></script> -->
-<script src="js/cbpGridGallery.js"></script>
-<script src="js/jquery.hoverdir.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.js"></script>
+<!-- <script src="js/cbpGridGallery.js"></script> -->
+<!-- <script src="js/jquery.hoverdir.js"></script> -->
+<!-- <script src="js/popper.min.js"></script> -->
+<!-- <script src="js/bootstrap.js"></script> -->
 <script src="js/custom.js"></script>
 
 </body>
