--- a/index.html
+++ b/index.html
@@ -13,17 +13,11 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#da532c">
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
-
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link href="css/preloader.min.css" rel="stylesheet"> -->
-    <link href="css/circle.css" rel="stylesheet">
-    <!-- <link href="css/font-awesome.min.css" rel="stylesheet"> -->
     <link href="css/fm.revealator.jquery.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/fonts.css">
+    <link href="css/fonts.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <!-- <link href="css/skins/red.css" rel="stylesheet"> -->
     <script src="js/modernizr.custom.js"></script>
 </head>
 
