--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
     <!-- Template CSS Files -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/preloader.min.css" rel="stylesheet">
+    <!-- <link href="css/preloader.min.css" rel="stylesheet"> -->
     <link href="css/circle.css" rel="stylesheet">
     <!-- <link href="css/font-awesome.min.css" rel="stylesheet"> -->
     <link href="css/fm.revealator.jquery.min.css" rel="stylesheet">
