--- a/contact.html
+++ b/contact.html
@@ -16,11 +16,11 @@
 
     <!-- Template CSS Files -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/preloader.min.css" rel="stylesheet">
-    <link href="css/circle.css" rel="stylesheet">
+    <!-- <link href="css/preloader.min.css" rel="stylesheet"> -->
+    <!-- <link href="css/circle.css" rel="stylesheet"> -->
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
-    <link href="css/fm.revealator.jquery.min.css" rel="stylesheet">
+    <!-- <link href="css/fm.revealator.jquery.min.css" rel="stylesheet"> -->
     <link href="css/style.css" rel="stylesheet">
 
 
@@ -151,16 +151,16 @@
 </section>
 <!-- Template JS Files -->
 <script src="js/jquery-3.5.0.min.js"></script>
-<script src="js/styleswitcher.js"></script>
+<!-- <script src="js/styleswitcher.js"></script> -->
 <script src="js/preloader.min.js"></script>
-<script src="js/fm.revealator.jquery.min.js"></script>
-<script src="js/imagesloaded.pkgd.min.js"></script>
-<script src="js/masonry.pkgd.min.js"></script>
-<script src="js/classie.js"></script>
-<script src="js/cbpGridGallery.js"></script>
-<script src="js/jquery.hoverdir.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.js"></script>
+<!-- <script src="js/fm.revealator.jquery.min.js"></script> -->
+<!-- <script src="js/imagesloaded.pkgd.min.js"></script> -->
+<!-- <script src="js/masonry.pkgd.min.js"></script> -->
+<!-- <script src="js/classie.js"></script> -->
+<!-- <script src="js/cbpGridGallery.js"></script> -->
+<!-- <script src="js/jquery.hoverdir.js"></script> -->
+<!-- <script src="js/popper.min.js"></script> -->
+<!-- <script src="js/bootstrap.js"></script> -->
 <script src="js/custom.js"></script>
 
 </body>
