--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,9 @@
 
     <!-- Template CSS Files -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/preloader.min.css" rel="stylesheet">
+    <!-- <link href="css/preloader.min.css" rel="stylesheet"> -->
     <link href="css/fonts.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <!-- <link href="css/font-awesome.min.css" rel="stylesheet"> -->
     <link href="css/fm.revealator.jquery.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
