--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,7 @@
     <link href="css/fonts.css" rel="stylesheet">
     <!-- <link href="css/font-awesome.min.css" rel="stylesheet"> -->
     <link href="css/fm.revealator.jquery.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/scroll_img.css">
     <link href="css/style.css" rel="stylesheet">
 
 
@@ -200,7 +201,13 @@
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <img src="img/projects/project-1.jpg" alt="Portolio Image" />
+                        <div class="demo-wrapper">
+                            <div class="portfolio-img" style="background-image: url(img/projects/house_windows.png);">
+                                <span class="leble">Click Here to edit in Builder</span> 
+                                <a class="leble" href="#" target="_blank"> Click Here to envato.com</a>
+                            </div> 
+                            <!-- <img class="portfolio-img" src="img/projects/house_windows.png" alt="Portolio Image" /></div> -->
+                        
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
